# my_robot

./: .gitignore  README.md  README_.md
catkin_ws/src/ball_chaser/: CMakeLists.txt  package.xml
catkin_ws/src/ball_chaser/include/drive_bot/: drive_bot.cpp  drive_bot.h
catkin_ws/src/ball_chaser/include/process_image/: process_image.cpp  process_image.h
catkin_ws/src/ball_chaser/launch/: ball_chaser.launch
catkin_ws/src/ball_chaser/src/: drive_bot.cpp  drive_bot_node.cpp  process_image.cpp  process_image_node.cpp
catkin_ws/src/common/: CMakeLists.txt  package.xml
catkin_ws/src/common/include/hsr/: hsr.h  (+1 more)
catkin_ws/src/database/: README.md  package.xml
catkin_ws/src/database/hsr/: marker.yaml
catkin_ws/src/database/rviz/: hsr.rviz  mapping.rviz  simple.rviz
catkin_ws/src/database/slam/: rtabmap.db
catkin_ws/src/detector/: CMakeLists.txt  package.xml
catkin_ws/src/detector/srv/: Detect.srv
catkin_ws/src/extras/: CMakeLists.txt  package.xml
catkin_ws/src/extras/include/: CMakeLists.txt
catkin_ws/src/extras/include/common/: CMakeLists.txt  common.h
catkin_ws/src/hsr/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/hsr/include/marker_publisher/: marker_publisher.cpp  marker_publisher.h
catkin_ws/src/hsr/launch/: marker_command.launch  marker_publisher.launch
catkin_ws/src/hsr/src/: marker_command_req.cpp  marker_publisher_node.cpp
catkin_ws/src/hsr/srv/: MarkerCommand.srv
catkin_ws/src/localization/: README.md  package.xml
catkin_ws/src/localization/launch/: amcl.launch  localization.launch
catkin_ws/src/mapping/: README.md  package.xml
catkin_ws/src/mapping/launch/: mapping.launch
catkin_ws/src/my_robot/launch/: amcl.launch  localization.launch  mapping.launch  robot_description.launch  world.launch
catkin_ws/src/my_robot/rviz/: my_robot.rviz
catkin_ws/src/my_robot/urdf/: my_robot.gazebo  my_robot.xacro
catkin_ws/src/my_robot/world/: ingrid.world  navarrs.world  navarrs_bot.world
catkin_ws/src/my_robot/worlds/: ingrid.world
catkin_ws/src/robot/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/robot/launch/: robot_spawn.launch  spawn.launch  world.launch  world_robot.launch
catkin_ws/src/robot/urdf/: dummy.gazebo  dummy.xacro  my_robot.xacro
catkin_ws/src/service_robot/: CMakeLists.txt  package.xml
catkin_ws/src/service_robot/include/marker_publisher/: marker_publisher.cpp  marker_publisher.h
catkin_ws/src/service_robot/launch/: marker_publisher.launch
catkin_ws/src/service_robot/src/: marker_publisher_node.cpp
scripts/: amcl.zsh  hsr_marker.zsh  localization.zsh  localization_amcl.zsh  mapping.zsh  robot_spawn.zsh  spawn.zsh  world.zsh
src/ball_chaser/src/: process_image.cpp
src/my_robot/: package.xml
src/my_robot/launch/: mapping.launch  robot_description.launch  world.launch  world_spawn-robot.launch
src/my_robot/urdf/: my_robot.gazebo  my_robot.xacro
(+13 files in other folders)
