<?xml version="1.0"?>
<package format="2">
  <name>localization</name>
  <version>0.0.0</version>
  <description>
    Localization package is used to help the robot localize itself on a 
    known map.
  </description>
  <maintainer email="navars.in@gmail.com">navarrs</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export></export>
</package>
