<?xml version="1.0"?>
<package format="2">
  <name>mapping</name>
  <version>0.0.0</version>
  <description>
    Mapping Package uses RTABMAP perform mapping
  </description>
  <maintainer email="navars.in@gmail.com">navarrs</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export></export>
</package>