<?xml version="1.0"?>
<package format="2">
  <name>robot</name>
  <version>0.0.0</version>
  <description>
    Robot Package contains the robot description files.
  </description>
  <maintainer email="navars.in@gmail.com">navarrs</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export></export>
</package>
