<?xml version="1.0"?>
<package format="2">
  <name>service_robot</name>
  <version>0.0.0</version>
  <description>The service_robot package</description>
  <maintainer email="navars.in@gmail.com">navarrs</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <build_depend>common</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <export> </export>
</package>
