#-------------------------------------------------------------------------------
# @file: CMakeLists.txt
# @created on: May 29, 2020
# @author: Ingrid Navarro (navarrs)
#-------------------------------------------------------------------------------
project(common)
install(
  FILES ${PROJECT_NAME}.h
  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
